--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
-title:              "블로그 제목"
-tagline:            "블로그 슬로건"
-email:              "your-email@example.com"
+title:              "COMMA"
+tagline:            "NEXT COMMA NEW THING"
+email:              "hvv01829@gmail.com"
 description:        "블로그 설명"
-author:             "작성자 이름"
+author:             "Gujuhyun"
 baseurl:            "/"
-url:                "https://도메인"
+url:                "https://ofcomma.com"
 locale:             "ko_KR"
 thumbnail:          "/img/thumbnail.jpg"
 
 # Social Profiles
-twitter_username:   twitter_username
-instagram_username: instagram_username
+#twitter_username:   twitter_username
+instagram_username: instagram_of_comma
 facebook_username:  facebook_username
-linkedin_username:  linkedin_username
+#linkedin_username:  linkedin_username
 
 # Build settings
 markdown:           kramdown
