--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              "COMMA"
+title:              "CO(((((((MMA"
 tagline:            "NEXT COMMA NEW THING"
 email:              "hvv01829@gmail.com"
 description:        "블로그 설명"
