--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              "CO(((((((MMA"
+title:              "COMMA"
 tagline:            "NEXT COMMA NEW THING"
 email:              "hvv01829@gmail.com"
 description:        "블로그 설명"
@@ -6,7 +6,7 @@ author:             "Gujuhyun"
 baseurl:            "/"
 url:                "https://ofcomma.com"
 locale:             "ko_KR"
-thumbnail:          "/img/thumbnail.jpg"
+thumbnail:          "/img/bg-index.jpg"
 
 
 
