파비콘수정2

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              "COMMA"
 tagline:            "NEXT COMMA NEW THING"
 email:              "hvv01829@gmail.com"
-description:        "블로그 설명"
+description:        "다양한 앱과 인사이트 정보 구독을 통해 콘텐츠 소양을 쌓아보세요."
 author:             "Gujuhyun"
 baseurl:            "/"
 url:                "https://ofcomma.com"
