카테고리 수정1

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ thumbnail:          "/img/bg-index.jpg"
 # Social Profiles
 #twitter_username:   twitter_username
 instagram_username: instagram_of_comma
-facebook_username:  facebook_username
+facebook_username:  facebook_COMMA
 #linkedin_username:  linkedin_username
 
 # Build settings
